--- a/e-commerce-app/package.json
+++ b/e-commerce-app/package.json
@@ -8,8 +8,10 @@
     "@fontsource/roboto": "^5.0.8",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.139",
     "@mui/material": "^5.14.4",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
