--- a/e-commerce-app/package.json
+++ b/e-commerce-app/package.json
@@ -2,6 +2,7 @@
   "name": "e-commerce-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://evgueniazet.github.io/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
